kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: app
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"web-backendconfig"}}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    run: web
  type: NodePort
